change connection string

--- a/backend/TeamPilotApp/TeamPilot.Api/appsettings.Development.json
+++ b/backend/TeamPilotApp/TeamPilot.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TeamPilotData": "Server=(localdb)\\mssqllocaldb;Database=TeamPilotData;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TeamPilotData": "Server=tcp:switchfullyteampilotdb.database.windows.net,1433;Initial Catalog=switchfullyteampilotdb_tmp;Persist Security Info=False;User ID=KUCL;Password=DotNetRocks23!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjXWRgJMFPU5",
